corrected change with vertical align

--- a/styles.css
+++ b/styles.css
@@ -12,35 +12,35 @@
    }
    #header{
     height: 150px;
-    margin: 0px 0px 10px 0px;
+    margin-bottom: 10px;
     background-color: green;
    }
    #navigation{
     height: 300px;
     width: 200px;
-    margin-bottom: 55px;
+    vertical-align: top;
     background-color: blue;
     display: inline-block;
    }
    #main_content{
     height: 400px;
     width: 700px;
-    margin-left: 35px;
-    padding: 5px;
+    margin-left: 15px;
+    padding: 15px;
     background-color: red;
     display: inline-block;
    }
    .subcontents{
     height: 200px;
     width: 210px;
-    margin: 5px;
+    margin-right: 15px;
     background-color: yellow;
     display: inline-block;
    }
    #advertisement{
     height: 120px;
     width: 660px;
-    margin: 10px 5px 5px 5px;
+    margin-top: 15px;
     background-color: purple;
     display: inline-block;
    }
